feat(manage-categories): add create and list category endpoint
