# controllers/admin/categories/create/create_contract.go
@@ -1,0 +1,13 @@
+package create
+
+import (
+	"gosimplecms/models"
+)
+
+func (ctl *CategoryCreateController) transformToResponse(category *models.Category) *models.CreateUpdateCategoryResponse {
+	return &models.CreateUpdateCategoryResponse{
+		ID:   category.ID,
+		Name: category.Name,
+		Slug: category.Slug,
+	}
+}
