# routes/routes.go
@@ -2,9 +2,11 @@ package routes
 
 import (
 	"github.com/gin-gonic/gin"
+	adminCategoryCreate "gosimplecms/controllers/admin/categories/create"
+	adminCategoryList "gosimplecms/controllers/admin/categories/list"
 	"gosimplecms/controllers/posts/list"
-	"gosimplecms/controllers/user/login"
-	"gosimplecms/controllers/user/register"
+	"gosimplecms/controllers/users/login"
+	"gosimplecms/controllers/users/register"
 )
 
 func SetupRoutes(
@@ -13,13 +15,26 @@ func SetupRoutes(
 	userRegisterController *register.UserRegisterController,
 	userLoginController *login.UserLoginController,
 	listPostsController *list.PostListController,
+	adminCategoryCreateController *adminCategoryCreate.CategoryCreateController,
+	adminCategoryListController *adminCategoryList.CategoryListController,
 ) {
 
 	r.POST("/register", userRegisterController.Register)
 	r.POST("/login", userLoginController.Login)
 
-	postRoutes := r.Group("/posts")
+	// Protected routes with JWT
+	apiV1 := r.Group("/api/v1")
+
+	// Admin only routes
+	adminV1 := apiV1.Group("/admin")
+
+	adminV1Categories := adminV1.Group("/categories")
 	{
-		postRoutes.GET("", listPostsController.GetPosts)
+		adminV1Categories.POST("", adminCategoryCreateController.Create)
+		adminV1Categories.GET("", adminCategoryListController.GetCategories)
 	}
+	//postRoutes := r.Group("/posts")
+	//{
+	//	postRoutes.GET("", listPostsController.GetPosts)
+	//}
 }
